@@ -50,35 +50,13 @@ public class ConnectionsResource {
 
   @GET
   @Produces(MediaType.APPLICATION_JSON)
-  public Uni<ConnectionsList> listConnections() {
-    return Uni.createFrom()
-        .item(() -> connectionStateManager.getConnectionStates())
-        .onItem().transformToUni(connectionStates -> {
-          var connectionFutures = connectionStates
-              .stream()
-              .map(connection -> Uni
-                  .createFrom()
-                  .completionStage(() -> getConnectionModel(connection.getSpec().id())))
-              .collect(Collectors.toList());
-          if (connectionFutures.isEmpty()) {
-            Log.debug("Returning no connections");
-            return Uni
-                .createFrom()
-                .item(new ConnectionsList());
-          }
-          Log.debugf("Returning %d connections", connectionFutures.size());
-          return Uni
-              .combine()
-              .all()
-              .unis(connectionFutures)
-              .with(connections -> {
-                var connectionList = connections
-                    .stream()
-                    .map(connection -> (Connection) connection)
-                    .collect(Collectors.toList());
-                return new ConnectionsList(connectionList);
-              });
-        });
+  public ConnectionsList listConnections() {
+    var connections = connectionStateManager
+        .getConnectionStates()
+        .stream()
+        .map(connection -> getConnectionModel(connection.getSpec().id()))
+        .toList();
+    return new ConnectionsList(connections);
   }
 
   @POST
@@ -99,7 +77,7 @@ public class ConnectionsResource {
       // Just test the connection and return the status
       var testedState = connectionStateManager.testConnectionState(connectionSpec);
       // Get the status of the connection
-      var futureStatus = testedState.getConnectionStatus();
+      var futureStatus = testedState.checkStatus();
       // And create a uni that will complete when the status is available
       return Uni
           .createFrom()
@@ -113,15 +91,16 @@ public class ConnectionsResource {
     return Uni
         .createFrom()
         .item(
-            Connection.from(newState, newState.getInitialStatus())
+            Connection.from(newState)
         );
   }
 
   @GET
   @Path("/{id}")
   @Produces(MediaType.APPLICATION_JSON)
-  public Uni<Connection> getConnection(@PathParam("id") String id) {
-    return Uni.createFrom().completionStage(() -> getConnectionModel(id));
+  public Connection getConnection(@PathParam("id") String id) {
+    ConnectionState connectionState = connectionStateManager.getConnectionState(id);
+    return Connection.from(connectionState);
   }
 
   @PUT
@@ -161,7 +140,7 @@ public class ConnectionsResource {
   public Uni<Connection> updateConnection(@PathParam("id") String id, ConnectionSpec spec) {
     return connectionStateManager
         .updateSpecForConnectionState(id, spec)
-        .chain(ignored -> Uni.createFrom().completionStage(() -> getConnectionModel(id)));
+        .chain(ignored -> Uni.createFrom().item(() -> getConnectionModel(id)));
   }
 
   @DELETE
@@ -170,15 +149,8 @@ public class ConnectionsResource {
     connectionStateManager.deleteConnectionState(id);
   }
 
-  private CompletionStage<Connection> getConnectionModel(String id) {
-    try {
-      ConnectionState connectionState = connectionStateManager.getConnectionState(id);
-      return connectionState
-          .getConnectionStatus()
-          .map(connectionStatus -> Connection.from(connectionState, connectionStatus))
-          .toCompletionStage();
-    } catch (ConnectionNotFoundException e) {
-      return CompletableFuture.failedFuture(e);
-    }
+  private Connection getConnectionModel(String id) {
+    ConnectionState connectionState = connectionStateManager.getConnectionState(id);
+    return Connection.from(connectionState);
   }
 }
